--- a/extension/trunk/source/com/bedrock/extension/view/ExtensionView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/ExtensionView.mxml
@@ -2,6 +2,7 @@
 <mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" creationComplete="this._initialize()" xmlns:view="com.bedrock.extension.view.*" xmlns:temp="com.bedrock.extension.project.view.temp.*" xmlns:extras="com.bedrock.extension.view.extras.*" xmlns:project="com.bedrock.extension.view.project.*" xmlns:misc="com.bedrock.extension.view.misc.*">
 	<mx:Script>
 		<![CDATA[
+			import com.bedrock.framework.plugin.util.XMLUtil2;
 			import com.bedrock.framework.Bedrock;
 			import com.bedrock.framework.core.logging.LogLevel;
 			import com.greensock.easing.Circ;
@@ -40,7 +41,7 @@
 				this._extensionSettingsView = new ExtensionSettingsView;
 				this._extensionSettingsView.initialize();
 				
-				this.projectContainer.addChild( ExtensionController.getInstance().moduleLoader );
+				this.projectContainer.addChild( ExtensionController.instance().moduleLoader );
 			}
 			
 			private function _showSettings():void
@@ -53,7 +54,7 @@
 			
 			private function _showNamingConventions():void
 			{
-				this.panelStack.selectedIndex = 4;
+				this.panelStack.selectedIndex = this.panelStack.numChildren - 1;
 				this.projectButtonBar.selectedIndex = -1;
 			}
 			private function _toggleButtons( $enabled:Boolean ):void
@@ -66,7 +67,7 @@
 			
 			private function _updateAutoHideMenu():void
 			{
-				var autoHideMenu:Boolean = VariableUtil.sanitize( ExtensionController.getInstance().settingsXML.autoHideMenu );
+				var autoHideMenu:Boolean = VariableUtil.sanitize( ExtensionController.instance().settingsXML.autoHideMenu );
 				if ( autoHideMenu ) {
 					this.addEventListener( Event.ENTER_FRAME, this._onEnterFrame );
 					this._hideMainNavigation();
@@ -148,9 +149,9 @@
 			<mx:Spacer width="100%"/>
 		</mx:HBox>
 		<mx:HBox x="0" y="0" width="100%" height="55" verticalAlign="middle" horizontalAlign="center" styleName="padded">
-			<mx:VBox height="100%"  visible="{ VariableUtil.sanitize( ExtensionController.getInstance().projectXML.@generated ) }" styleName="menuBox" id="projectDetailContainer" click="this._onProjectLoaded( event )" buttonMode="true" mouseChildren="false">
-				<mx:Label id="projectLabel"  text="Project : { ExtensionController.getInstance().projectXML.@name }" color="#FFFFFF"/>
-				<mx:Label id="versionLabel"  text="Version : { ExtensionController.getInstance().projectXML.frameworkVersion }" color="#FFFFFF"/>
+			<mx:VBox height="100%"  visible="{ VariableUtil.sanitize( ExtensionController.instance().projectXML.@generated ) }" styleName="menuBox" id="projectDetailContainer" click="this._onProjectLoaded( event )" buttonMode="true" mouseChildren="false">
+				<mx:Label id="projectLabel"  text="Project : { ExtensionController.instance().projectXML.@name }" color="#FFFFFF"/>
+				<mx:Label id="versionLabel"  text="Version : { ExtensionController.instance().projectXML.frameworkVersion }" color="#FFFFFF"/>
 			</mx:VBox>
 			<mx:Spacer width="100%"/>
 			<mx:VBox height="100%" backgroundColor="#000000" id="buttonContainer" styleName="menuBox" horizontalAlign="right" >
