--- a/extension/trunk/source/com/bedrock/extension/view/extras/NamingConventionsGroupView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/extras/NamingConventionsGroupView.mxml
@@ -13,7 +13,7 @@
 				
 				columns.push( this._getFirstColumn() );
 				var column:DataGridColumn;
-				for each( var option:Object in ExtensionController.getInstance().namingConventions.options ) {
+				for each( var option:Object in ExtensionController.instance().namingConventions.options ) {
 					column = new DataGridColumn();
 					column.headerText = option.label;
 					column.dataField = option.id;
