--- a/extension/trunk/source/com/bedrock/extension/view/popups/ExtensionSettingsView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/popups/ExtensionSettingsView.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GenericExtensionPopupView direction="horizontal" initialize="this._initialize()" xmlns="com.bedrock.extension.view.popups.*" xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" xmlns:misc="com.bedrock.extension.view.misc.*">
+<GenericPopupView direction="horizontal" initialize="this._initialize()" xmlns="com.bedrock.extension.view.popups.*" xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" xmlns:misc="com.bedrock.extension.view.misc.*">
 	<mx:Script>
 		<![CDATA[
 			import com.bedrock.framework.plugin.util.VariableUtil;
@@ -18,13 +18,13 @@
 			
 			public function populate():void
 			{
-				this.addBedrockClassPathsCheck.selected = VariableUtil.sanitize( ExtensionController.getInstance().settingsXML.addBedrockToClassPaths );
-				this.autoLoadMostRecentProjectCheck.selected = VariableUtil.sanitize( ExtensionController.getInstance().settingsXML.autoLoadMostRecentProject );
-				this.autoSaveConfigChangesCheck.selected = VariableUtil.sanitize( ExtensionController.getInstance().settingsXML.autoSaveConfigChanges );
-				this.includeSubFoldersInProjectBrowserCheck.selected = VariableUtil.sanitize( ExtensionController.getInstance().settingsXML.includeSubFoldersInProjectBrowser );
-				this.autoHideMenuCheck.selected = VariableUtil.sanitize( ExtensionController.getInstance().settingsXML.autoHideMenu );
+				this.addBedrockClassPathsCheck.selected = VariableUtil.sanitize( ExtensionController.instance().settingsXML.addBedrockToClassPaths );
+				this.autoLoadMostRecentProjectCheck.selected = VariableUtil.sanitize( ExtensionController.instance().settingsXML.autoLoadMostRecentProject );
+				this.autoSaveConfigChangesCheck.selected = VariableUtil.sanitize( ExtensionController.instance().settingsXML.autoSaveConfigChanges );
+				this.includeSubFoldersInProjectBrowserCheck.selected = VariableUtil.sanitize( ExtensionController.instance().settingsXML.includeSubFoldersInProjectBrowser );
+				this.autoHideMenuCheck.selected = VariableUtil.sanitize( ExtensionController.instance().settingsXML.autoHideMenu );
 				
-				this.frameworkVersionCombo.dataProvider = ExtensionController.getInstance().versions;
+				this.frameworkVersionCombo.dataProvider = ExtensionController.instance().versions;
 				this.frameworkVersionCombo.enabled = this.addBedrockClassPathsCheck.selected;
 			}
 			
@@ -32,40 +32,40 @@
 			{
 				this.closePopup();
 				
-				PopUpManager.addPopUp( this._templateManagementView, ExtensionController.getInstance().root, true );
+				PopUpManager.addPopUp( this._templateManagementView, ExtensionController.instance().root, true );
 				PopUpManager.centerPopUp( this._templateManagementView );
 			}
 			
 			private function _toggleBedrockClassPath():void
 			{
 				if ( this.addBedrockClassPathsCheck.selected ) {
-					ExtensionController.getInstance().createClassPath( this.frameworkVersionCombo.selectedLabel );
+					ExtensionController.instance().createClassPath( this.frameworkVersionCombo.selectedLabel );
 				} else {
-					ExtensionController.getInstance().deleteClassPath();
+					ExtensionController.instance().deleteClassPath();
 				}
-				ExtensionController.getInstance().settingsXML.addBedrockToClassPaths = this.addBedrockClassPathsCheck.selected;
+				ExtensionController.instance().settingsXML.addBedrockToClassPaths = this.addBedrockClassPathsCheck.selected;
 				this.frameworkVersionCombo.enabled = this.addBedrockClassPathsCheck.selected;
-				ExtensionController.getInstance().saveSettings();
+				ExtensionController.instance().saveSettings();
 			}
 			private function _toggleAutoLoadMostRecentProject():void
 			{
-				ExtensionController.getInstance().settingsXML.autoLoadMostRecentProject = this.autoLoadMostRecentProjectCheck.selected;
-				ExtensionController.getInstance().saveSettings();
+				ExtensionController.instance().settingsXML.autoLoadMostRecentProject = this.autoLoadMostRecentProjectCheck.selected;
+				ExtensionController.instance().saveSettings();
 			}
 			private function _toggleAutoSaveConfigChanges():void
 			{
-				ExtensionController.getInstance().settingsXML.autoSaveConfigChanges = this.autoSaveConfigChangesCheck.selected;
-				ExtensionController.getInstance().saveSettings();
+				ExtensionController.instance().settingsXML.autoSaveConfigChanges = this.autoSaveConfigChangesCheck.selected;
+				ExtensionController.instance().saveSettings();
 			}
 			private function _toggleIncludeSubFoldersInProjectBrowser():void
 			{
-				ExtensionController.getInstance().settingsXML.includeSubFoldersInProjectBrowser = this.includeSubFoldersInProjectBrowserCheck.selected;
-				ExtensionController.getInstance().saveSettings();
+				ExtensionController.instance().settingsXML.includeSubFoldersInProjectBrowser = this.includeSubFoldersInProjectBrowserCheck.selected;
+				ExtensionController.instance().saveSettings();
 			}
 			private function _toggleAutoHideMenu():void
 			{
-				ExtensionController.getInstance().settingsXML.autoHideMenu = this.autoHideMenuCheck.selected;
-				ExtensionController.getInstance().saveSettings();
+				ExtensionController.instance().settingsXML.autoHideMenu = this.autoHideMenuCheck.selected;
+				ExtensionController.instance().saveSettings();
 			}
 			private function _clearSettings():void
 			{
@@ -75,7 +75,7 @@
 			{
 				switch ( $event.detail ) {
 					case Alert.OK :
-						ExtensionController.getInstance().createSettings();
+						ExtensionController.instance().createSettings();
 						this.closePopup();
 						break;
 				}
@@ -116,4 +116,4 @@
 	</mx:Panel>
 	
 	
-</GenericExtensionPopupView>
+</GenericPopupView>
