--- a/extension/trunk/source/com/bedrock/extension/view/popups/TemplateManagementView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/popups/TemplateManagementView.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GenericExtensionPopupView xmlns="com.bedrock.extension.view.popups.*" xmlns:mx="http://www.adobe.com/2006/mxml">
+<GenericPopupView xmlns="com.bedrock.extension.view.popups.*" xmlns:mx="http://www.adobe.com/2006/mxml">
 	<mx:Script>
 		<![CDATA[
 			import com.bedrock.extension.controller.ExtensionController;
@@ -11,17 +11,17 @@
 			
 			private function _findTemplate():void
 			{
-				ExtensionController.getInstance().findTemplate();
+				ExtensionController.instance().findTemplate();
 			}
 			private function _removeTemplate():void
 			{
-				ExtensionController.getInstance().removeTemplate( this.templateGrid.selectedItem.@name );
+				ExtensionController.instance().removeTemplate( this.templateGrid.selectedItem.@name );
 			}
 			
 		]]>
 	</mx:Script>
 	<mx:Panel title="Templates" styleName="parentPanel" height="100%">
-		<mx:DataGrid height="100%" width="400" id="templateGrid" dataProvider="{ ExtensionController.getInstance().settingsXML.templates..template }">
+		<mx:DataGrid height="100%" width="400" id="templateGrid" dataProvider="{ ExtensionController.instance().settingsXML.templates..template }">
 			<mx:columns>
 				<mx:DataGridColumn headerText="Name" dataField="@name"/>
 				<mx:DataGridColumn headerText="Path" dataField="@path"/>
@@ -37,4 +37,4 @@
 		</mx:ControlBar>
 	</mx:Panel>
 	
-</GenericExtensionPopupView>
+</GenericPopupView>
